@@ -4,6 +4,7 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import jakarta.annotation.Nullable;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -65,6 +66,19 @@ public class IndicatorMappingConfigurationLoader {
         };
     }
 
+    public static Map<String, String> fetchExternalIndicatorMappings() {
+        return indicatorMappingConfiguration.externalMappings;
+    }
+
+    public static Map<String, Integer> fetchExternalMappingConstraints(
+        ExternalMappingConstraintType constraintType) {
+        return switch (constraintType) {
+            case HARVEST_PERIOD_OFFSET ->
+                indicatorMappingConfiguration.externalMappingConstraints.harvestYearPeriod;
+            case RATE_LIMIT -> indicatorMappingConfiguration.externalMappingConstraints.rateLimits;
+        };
+    }
+
     public static List<String> fetchAllStatisticsIndicatorCodes() {
         var indicatorCodes = new HashSet<String>();
         indicatorMappingConfiguration.mappings.values().forEach(indicatorCodes::addAll);
@@ -90,7 +104,7 @@ public class IndicatorMappingConfigurationLoader {
         var name = classNameParts[classNameParts.length - 1];
 
         if (!indicatorMappingConfiguration.exclusions.containsKey(name)) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         return indicatorMappingConfiguration.exclusions().get(name);
@@ -101,7 +115,15 @@ public class IndicatorMappingConfigurationLoader {
         @JsonProperty(value = "statisticOffsets", required = true) Offsets offsets,
         @JsonProperty(value = "statisticExclusions", required = true) Map<String, List<String>> exclusions,
         @JsonProperty(value = "publicationSeriesCSVIndicatorMapping", required = true) Map<String, PublicationSeriesIndicatorMapping> publicationSeriesCSVIndicatorMapping,
-        @JsonProperty(value = "ifTableContent") List<String> ifTableContent
+        @JsonProperty(value = "ifTableContent") List<String> ifTableContent,
+        @JsonProperty(value = "externalMappings") Map<String, String> externalMappings,
+        @JsonProperty(value = "externalMappingConstraints") ExternalMappingConstraints externalMappingConstraints
+    ) {
+    }
+
+    public record ExternalMappingConstraints(
+        @JsonProperty(value = "harvestYearPeriod") Map<String, Integer> harvestYearPeriod,
+        @JsonProperty(value = "rateLimits") Map<String, Integer> rateLimits
     ) {
     }
 
