@@ -1,24 +1,31 @@
 package rs.teslaris.core.service.impl.comparator;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.BiConsumer;
+import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import rs.teslaris.core.annotation.Traceable;
 import rs.teslaris.core.dto.document.BookSeriesDTO;
 import rs.teslaris.core.dto.document.ConferenceDTO;
 import rs.teslaris.core.dto.document.DatasetDTO;
+import rs.teslaris.core.dto.document.DocumentDTO;
 import rs.teslaris.core.dto.document.JournalDTO;
 import rs.teslaris.core.dto.document.JournalPublicationDTO;
 import rs.teslaris.core.dto.document.MonographDTO;
 import rs.teslaris.core.dto.document.MonographPublicationDTO;
 import rs.teslaris.core.dto.document.PatentDTO;
+import rs.teslaris.core.dto.document.PersonContributionDTO;
 import rs.teslaris.core.dto.document.ProceedingsDTO;
 import rs.teslaris.core.dto.document.ProceedingsPublicationDTO;
 import rs.teslaris.core.dto.document.PublisherDTO;
@@ -28,6 +35,7 @@ import rs.teslaris.core.dto.institution.OrganisationUnitRequestDTO;
 import rs.teslaris.core.dto.person.PersonalInfoDTO;
 import rs.teslaris.core.indexmodel.DocumentPublicationIndex;
 import rs.teslaris.core.indexmodel.DocumentPublicationType;
+import rs.teslaris.core.indexmodel.EntityType;
 import rs.teslaris.core.indexrepository.DocumentPublicationIndexRepository;
 import rs.teslaris.core.model.document.BookSeriesPublishable;
 import rs.teslaris.core.model.document.Document;
@@ -35,6 +43,8 @@ import rs.teslaris.core.model.document.Monograph;
 import rs.teslaris.core.model.document.Proceedings;
 import rs.teslaris.core.model.document.PublisherPublishable;
 import rs.teslaris.core.model.person.InvolvementType;
+import rs.teslaris.core.model.user.User;
+import rs.teslaris.core.model.user.UserRole;
 import rs.teslaris.core.repository.document.DatasetRepository;
 import rs.teslaris.core.repository.document.DocumentRepository;
 import rs.teslaris.core.repository.document.JournalPublicationRepository;
@@ -66,6 +76,7 @@ import rs.teslaris.core.service.interfaces.person.OrganisationUnitService;
 import rs.teslaris.core.service.interfaces.person.PersonService;
 import rs.teslaris.core.service.interfaces.person.PrizeService;
 import rs.teslaris.core.service.interfaces.user.UserService;
+import rs.teslaris.core.util.deduplication.Mergeable;
 import rs.teslaris.core.util.exceptionhandling.exception.ConferenceReferenceConstraintViolationException;
 import rs.teslaris.core.util.exceptionhandling.exception.NotFoundException;
 import rs.teslaris.core.util.exceptionhandling.exception.PersonReferenceConstraintViolationException;
@@ -224,7 +235,7 @@ public class MergeServiceImpl implements MergeService {
             (srcId, personPublicationIndex) -> performPersonPublicationSwitch(srcId, targetPersonId,
                 personPublicationIndex.getDatabaseId(), true),
             pageRequest -> documentPublicationService.findResearcherPublications(sourcePersonId,
-                List.of(),
+                Collections.emptyList(),
                 pageRequest).getContent()
         );
     }
@@ -240,7 +251,8 @@ public class MergeServiceImpl implements MergeService {
             sourceOUId,
             (srcId, personIndex) -> performEmployeeSwitch(srcId, targetOUId,
                 personIndex.getDatabaseId()),
-            pageRequest -> personService.findPeopleForOrganisationUnit(sourceOUId, pageRequest,
+            pageRequest -> personService.findPeopleForOrganisationUnit(sourceOUId, List.of("*"),
+                    pageRequest,
                     false)
                 .getContent()
         );
@@ -265,23 +277,36 @@ public class MergeServiceImpl implements MergeService {
 
     @Override
     public void switchInvolvements(List<Integer> involvementIds, Integer sourcePersonId,
-                                   Integer targetPersonId) {
+                                   Integer targetPersonId, Integer institutionId) {
         var sourcePerson = personService.findOne(sourcePersonId);
         var targetPerson = personService.findOne(targetPersonId);
+
+        var institutionIds = new ArrayList<Integer>();
+        if (Objects.nonNull(institutionId)) {
+            institutionIds.addAll(
+                organisationUnitService.getOrganisationUnitIdsFromSubHierarchy(institutionId));
+        }
 
         involvementIds.forEach(involvementId -> {
             var involvementToUpdate = involvementService.findOne(involvementId);
 
+            if (!institutionIds.isEmpty() && (
+                involvementToUpdate.getInvolvementType().equals(InvolvementType.EMPLOYED_AT) ||
+                    involvementToUpdate.getInvolvementType().equals(InvolvementType.HIRED_BY)) &&
+                institutionIds.contains(involvementToUpdate.getOrganisationUnit().getId())) {
+                return;
+            }
+
             if (sourcePerson.getInvolvements().contains(involvementToUpdate)) {
                 sourcePerson.removeInvolvement(involvementToUpdate);
-                involvementService.save(involvementToUpdate);
             }
 
             if (!targetPerson.getInvolvements().contains(involvementToUpdate)) {
                 involvementToUpdate.setPersonInvolved(targetPerson);
                 targetPerson.addInvolvement(involvementToUpdate);
-                involvementService.save(involvementToUpdate);
             }
+
+            involvementService.save(involvementToUpdate);
         });
 
         personService.save(sourcePerson);
@@ -290,8 +315,8 @@ public class MergeServiceImpl implements MergeService {
         userService.updateResearcherCurrentOrganisationUnitIfBound(sourcePersonId);
         userService.updateResearcherCurrentOrganisationUnitIfBound(targetPersonId);
 
-        personService.indexPerson(sourcePerson, sourcePerson.getId());
-        personService.indexPerson(targetPerson, targetPerson.getId());
+        personService.indexPerson(sourcePerson);
+        personService.indexPerson(targetPerson);
     }
 
     @Override
@@ -305,11 +330,13 @@ public class MergeServiceImpl implements MergeService {
 
             sourcePerson.getExpertisesAndSkills().remove(skillToUpdate);
 
-            targetPerson.getExpertisesAndSkills().add(skillToUpdate);
-        });
+            if (!targetPerson.getExpertisesAndSkills().contains(skillToUpdate)) {
+                targetPerson.getExpertisesAndSkills().add(skillToUpdate);
+                skillToUpdate.setPerson(targetPerson);
+            }
 
-        personService.save(sourcePerson);
-        personService.save(targetPerson);
+            expertiseOrSkillService.save(skillToUpdate);
+        });
     }
 
     @Override
@@ -326,10 +353,9 @@ public class MergeServiceImpl implements MergeService {
             if (!targetPerson.getPrizes().contains(prizeToUpdate)) {
                 targetPerson.addPrize(prizeToUpdate);
             }
-        });
 
-        personService.save(sourcePerson);
-        personService.save(targetPerson);
+            prizeService.save(prizeToUpdate);
+        });
     }
 
     @Override
@@ -352,31 +378,37 @@ public class MergeServiceImpl implements MergeService {
     @Override
     public void saveMergedProceedingsMetadata(Integer leftId, Integer rightId,
                                               ProceedingsDTO leftData, ProceedingsDTO rightData) {
-        updateAndRestoreMetadata(proceedingsService::updateProceedings, leftId, rightId, leftData,
+        handleNoAuthorsRemaining(leftData, rightData);
+        updateAndRestoreMetadata(proceedingsService::updateProceedings,
+            proceedingsService::indexProceedings, proceedingsService::findProceedingsById, leftId,
+            rightId, leftData,
             rightData,
             dto -> new String[] {dto.getEISBN(), dto.getPrintISBN(), dto.getDoi(),
-                dto.getScopusId()},
+                dto.getScopusId(), dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setEISBN(values[0]);
                 dto.setPrintISBN(values[1]);
                 dto.setDoi(values[2]);
                 dto.setScopusId(values[3]);
+                dto.setOpenAlexId(values[4]);
             });
     }
 
     @Override
     public void saveMergedPersonsMetadata(Integer leftId, Integer rightId,
                                           PersonalInfoDTO leftData, PersonalInfoDTO rightData) {
-        updateAndRestoreMetadata(personService::updatePersonalInfo, leftId, rightId, leftData,
+        updateAndRestoreMetadata(personService::updatePersonalInfo, personService::indexPerson,
+            personService::findOne, leftId, rightId, leftData,
             rightData,
             dto -> new String[] {dto.getApvnt(), dto.getECrisId(), dto.getENaukaId(),
-                dto.getScopusAuthorId(), dto.getOrcid()},
+                dto.getScopusAuthorId(), dto.getOrcid(), dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setApvnt(values[0]);
                 dto.setECrisId(values[1]);
                 dto.setENaukaId(values[2]);
                 dto.setScopusAuthorId(values[3]);
                 dto.setOrcid(values[4]);
+                dto.setOpenAlexId(values[5]);
             });
     }
 
@@ -384,24 +416,30 @@ public class MergeServiceImpl implements MergeService {
     public void saveMergedOUsMetadata(Integer leftId, Integer rightId,
                                       OrganisationUnitRequestDTO leftData,
                                       OrganisationUnitRequestDTO rightData) {
-        updateAndRestoreMetadata(organisationUnitService::editOrganisationUnit, leftId, rightId,
+        updateAndRestoreMetadata(organisationUnitService::editOrganisationUnit,
+            organisationUnitService::indexOrganisationUnit, organisationUnitService::findOne,
+            leftId, rightId,
             leftData,
             rightData,
-            dto -> new String[] {dto.getScopusAfid()},
+            dto -> new String[] {dto.getScopusAfid(), dto.getOpenAlexId(), dto.getRor()},
             (dto, values) -> {
                 dto.setScopusAfid(values[0]);
+                dto.setOpenAlexId(values[1]);
+                dto.setRor(values[2]);
             });
     }
 
     @Override
     public void saveMergedJournalsMetadata(Integer leftId, Integer rightId, JournalDTO leftData,
                                            JournalDTO rightData) {
-        updateAndRestoreMetadata(journalService::updateJournal, leftId, rightId, leftData,
+        updateAndRestoreMetadata(journalService::updateJournal, journalService::indexJournal,
+            journalService::findJournalById, leftId, rightId, leftData,
             rightData,
-            dto -> new String[] {dto.getEissn(), dto.getPrintISSN()},
+            dto -> new String[] {dto.getEissn(), dto.getPrintISSN(), dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setEissn(values[0]);
                 dto.setPrintISSN(values[1]);
+                dto.setOpenAlexId(values[2]);
             });
     }
 
@@ -409,58 +447,78 @@ public class MergeServiceImpl implements MergeService {
     public void saveMergedBookSeriesMetadata(Integer leftId, Integer rightId,
                                              BookSeriesDTO leftData,
                                              BookSeriesDTO rightData) {
-        updateAndRestoreMetadata(bookSeriesService::updateBookSeries, leftId, rightId, leftData,
+        updateAndRestoreMetadata(bookSeriesService::updateBookSeries,
+            bookSeriesService::indexBookSeries, bookSeriesService::findBookSeriesById, leftId,
+            rightId, leftData,
             rightData,
-            dto -> new String[] {dto.getEissn(), dto.getPrintISSN()},
+            dto -> new String[] {dto.getEissn(), dto.getPrintISSN(), dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setEissn(values[0]);
                 dto.setPrintISSN(values[1]);
+                dto.setOpenAlexId(values[2]);
             });
     }
 
     @Override
     public void saveMergedConferencesMetadata(Integer leftId, Integer rightId,
                                               ConferenceDTO leftData, ConferenceDTO rightData) {
-        updateAndRestoreMetadata(conferenceService::updateConference, leftId, rightId, leftData,
+        updateAndRestoreMetadata(conferenceService::updateConference,
+            conferenceService::indexConference, conferenceService::findConferenceById, leftId,
+            rightId, leftData,
             rightData,
-            dto -> new String[] {dto.getConfId()},
-            (dto, values) -> dto.setConfId(values[0]));
+            dto -> new String[] {dto.getConfId(), dto.getOpenAlexId()},
+            (dto, values) -> {
+                dto.setConfId(values[0]);
+                dto.setOpenAlexId(values[1]);
+            });
     }
 
     @Override
     public void saveMergedSoftwareMetadata(Integer leftId, Integer rightId, SoftwareDTO leftData,
                                            SoftwareDTO rightData) {
-        updateAndRestoreMetadata(softwareService::editSoftware, leftId, rightId, leftData,
+        handleNoAuthorsRemaining(leftData, rightData);
+        updateAndRestoreMetadata(softwareService::editSoftware, softwareService::indexSoftware,
+            softwareService::findSoftwareById, leftId, rightId, leftData,
             rightData,
-            dto -> new String[] {dto.getInternalNumber(), dto.getDoi(), dto.getScopusId()},
+            dto -> new String[] {dto.getInternalNumber(), dto.getDoi(), dto.getScopusId(),
+                dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setInternalNumber(values[0]);
                 dto.setDoi(values[1]);
                 dto.setScopusId(values[2]);
+                dto.setOpenAlexId(values[3]);
             });
     }
 
     @Override
     public void saveMergedDatasetsMetadata(Integer leftId, Integer rightId, DatasetDTO leftData,
                                            DatasetDTO rightData) {
-        updateAndRestoreMetadata(datasetService::editDataset, leftId, rightId, leftData, rightData,
-            dto -> new String[] {dto.getInternalNumber(), dto.getDoi(), dto.getScopusId()},
+        handleNoAuthorsRemaining(leftData, rightData);
+        updateAndRestoreMetadata(datasetService::editDataset, datasetService::indexDataset,
+            datasetService::findDatasetById, leftId, rightId, leftData, rightData,
+            dto -> new String[] {dto.getInternalNumber(), dto.getDoi(), dto.getScopusId(),
+                dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setInternalNumber(values[0]);
                 dto.setDoi(values[1]);
                 dto.setScopusId(values[2]);
+                dto.setOpenAlexId(values[3]);
             });
     }
 
     @Override
     public void saveMergedPatentsMetadata(Integer leftId, Integer rightId, PatentDTO leftData,
                                           PatentDTO rightData) {
-        updateAndRestoreMetadata(patentService::editPatent, leftId, rightId, leftData, rightData,
-            dto -> new String[] {dto.getNumber(), dto.getDoi(), dto.getScopusId()},
+        handleNoAuthorsRemaining(leftData, rightData);
+        updateAndRestoreMetadata(patentService::editPatent, patentService::indexPatent,
+            patentService::findPatentById, leftId, rightId, leftData, rightData,
+            dto -> new String[] {dto.getNumber(), dto.getDoi(), dto.getScopusId(),
+                dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setNumber(values[0]);
                 dto.setDoi(values[1]);
                 dto.setScopusId(values[2]);
+                dto.setOpenAlexId(values[3]);
             });
     }
 
@@ -468,12 +526,16 @@ public class MergeServiceImpl implements MergeService {
     public void saveMergedProceedingsPublicationMetadata(Integer leftId, Integer rightId,
                                                          ProceedingsPublicationDTO leftData,
                                                          ProceedingsPublicationDTO rightData) {
-        updateAndRestoreMetadata(proceedingsPublicationService::editProceedingsPublication, leftId,
+        handleNoAuthorsRemaining(leftData, rightData);
+        updateAndRestoreMetadata(proceedingsPublicationService::editProceedingsPublication,
+            proceedingsPublicationService::indexProceedingsPublication,
+            proceedingsPublicationService::findProceedingsPublicationById, leftId,
             rightId, leftData, rightData,
-            dto -> new String[] {dto.getDoi(), dto.getScopusId()},
+            dto -> new String[] {dto.getDoi(), dto.getScopusId(), dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setDoi(values[0]);
                 dto.setScopusId(values[1]);
+                dto.setOpenAlexId(values[2]);
             });
     }
 
@@ -481,30 +543,37 @@ public class MergeServiceImpl implements MergeService {
     public void saveMergedJournalPublicationMetadata(Integer leftId, Integer rightId,
                                                      JournalPublicationDTO leftData,
                                                      JournalPublicationDTO rightData) {
-        updateAndRestoreMetadata(journalPublicationService::editJournalPublication, leftId, rightId,
+        handleNoAuthorsRemaining(leftData, rightData);
+        updateAndRestoreMetadata(journalPublicationService::editJournalPublication,
+            journalPublicationService::indexJournalPublication,
+            journalPublicationService::findJournalPublicationById, leftId, rightId,
             leftData, rightData,
-            dto -> new String[] {dto.getDoi(), dto.getScopusId()},
+            dto -> new String[] {dto.getDoi(), dto.getScopusId(), dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setDoi(values[0]);
                 dto.setScopusId(values[1]);
+                dto.setOpenAlexId(values[2]);
             });
     }
 
     @Override
     public void saveMergedThesesMetadata(Integer leftId, Integer rightId, ThesisDTO leftData,
                                          ThesisDTO rightData) {
-        updateAndRestoreMetadata(thesisService::editThesis, leftId, rightId, leftData, rightData,
-            dto -> new String[] {dto.getDoi(), dto.getScopusId()},
+        updateAndRestoreMetadata(thesisService::editThesis, thesisService::indexThesis,
+            thesisService::getThesisById, leftId, rightId, leftData, rightData,
+            dto -> new String[] {dto.getDoi(), dto.getScopusId(), dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setDoi(values[0]);
                 dto.setScopusId(values[1]);
+                dto.setOpenAlexId(values[2]);
             });
     }
 
     @Override
     public void saveMergedPublishersMetadata(Integer leftId, Integer rightId, PublisherDTO leftData,
                                              PublisherDTO rightData) {
-        updateAndRestoreMetadata(publisherService::editPublisher, leftId, rightId, leftData,
+        updateAndRestoreMetadata(publisherService::editPublisher, publisherService::indexPublisher,
+            publisherService::findOne, leftId, rightId, leftData,
             rightData, dto -> new String[] {}, (dto, values) -> {
             });
     }
@@ -531,15 +600,18 @@ public class MergeServiceImpl implements MergeService {
     @Override
     public void saveMergedMonographsMetadata(Integer leftId, Integer rightId, MonographDTO leftData,
                                              MonographDTO rightData) {
-        updateAndRestoreMetadata(monographService::editMonograph, leftId, rightId, leftData,
+        handleNoAuthorsRemaining(leftData, rightData);
+        updateAndRestoreMetadata(monographService::editMonograph, monographService::indexMonograph,
+            monographService::findMonographById, leftId, rightId, leftData,
             rightData,
             dto -> new String[] {dto.getDoi(), dto.getScopusId(), dto.getPrintISBN(),
-                dto.getEisbn()},
+                dto.getEisbn(), dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setDoi(values[0]);
                 dto.setScopusId(values[1]);
                 dto.setPrintISBN(values[2]);
                 dto.setEisbn(values[3]);
+                dto.setOpenAlexId(values[4]);
             });
     }
 
@@ -547,14 +619,44 @@ public class MergeServiceImpl implements MergeService {
     public void saveMergedMonographPublicationsMetadata(Integer leftId, Integer rightId,
                                                         MonographPublicationDTO leftData,
                                                         MonographPublicationDTO rightData) {
-        updateAndRestoreMetadata(monographPublicationService::editMonographPublication, leftId,
+        handleNoAuthorsRemaining(leftData, rightData);
+        updateAndRestoreMetadata(monographPublicationService::editMonographPublication,
+            monographPublicationService::indexMonographPublication,
+            monographPublicationService::findMonographPublicationById, leftId,
             rightId,
             leftData, rightData,
-            dto -> new String[] {dto.getDoi(), dto.getScopusId()},
+            dto -> new String[] {dto.getDoi(), dto.getScopusId(), dto.getOpenAlexId()},
             (dto, values) -> {
                 dto.setDoi(values[0]);
                 dto.setScopusId(values[1]);
+                dto.setOpenAlexId(values[2]);
             });
+    }
+
+    @Override
+    public void migratePersistentIdentifiers(Integer deletionEntityId, Integer mergedEntityId,
+                                             EntityType entityType) {
+        switch (entityType) {
+            case BOOK_SERIES -> migrateIdentifierHistory(bookSeriesService::findRaw,
+                bookSeriesService::save, deletionEntityId, mergedEntityId);
+            case MONOGRAPH -> migrateIdentifierHistory(monographService::findRaw,
+                documentPublicationService::save, deletionEntityId, mergedEntityId);
+            case PROCEEDINGS -> migrateIdentifierHistory(proceedingsService::findRaw,
+                documentPublicationService::save, deletionEntityId, mergedEntityId);
+            case PUBLICATION -> migrateIdentifierHistory(documentPublicationService::findOne,
+                documentPublicationService::save, deletionEntityId, mergedEntityId);
+            case EVENT -> migrateIdentifierHistory(conferenceService::findRaw,
+                conferenceService::save, deletionEntityId, mergedEntityId);
+            case JOURNAL -> migrateIdentifierHistory(journalService::findRaw, journalService::save,
+                deletionEntityId, mergedEntityId);
+            case ORGANISATION_UNIT -> migrateIdentifierHistory(organisationUnitService::findRaw,
+                organisationUnitService::save, deletionEntityId, mergedEntityId);
+            case PERSON -> migrateIdentifierHistory(personService::findRaw, personService::save,
+                deletionEntityId, mergedEntityId);
+            case PUBLISHER ->
+                migrateIdentifierHistory(publisherService::findRaw, publisherService::save,
+                    deletionEntityId, mergedEntityId);
+        }
     }
 
     private void performMonographPublicationSwitch(Integer targetMonographId,
@@ -741,7 +843,7 @@ public class MergeServiceImpl implements MergeService {
         });
 
         userService.updateResearcherCurrentOrganisationUnitIfBound(personId);
-        personService.indexPerson(person, personId);
+        personService.indexPerson(person);
     }
 
     private <T> void processChunks(int sourceId,
@@ -786,11 +888,14 @@ public class MergeServiceImpl implements MergeService {
         });
     }
 
-    private <T> void updateAndRestoreMetadata(BiConsumer<Integer, T> updateMethod,
-                                              Integer leftId, Integer rightId,
-                                              T leftData, T rightData,
-                                              Function<T, String[]> originalValuesExtractor,
-                                              BiConsumer<T, String[]> restoreValues) {
+    private <T, R extends Mergeable> void updateAndRestoreMetadata(
+        BiConsumer<Integer, T> updateMethod,
+        Consumer<R> reindexMethod,
+        Function<Integer, R> fetchFunction,
+        Integer leftId, Integer rightId,
+        T leftData, T rightData,
+        Function<T, String[]> originalValuesExtractor,
+        BiConsumer<T, String[]> restoreValues) {
         String[] originalValues = originalValuesExtractor.apply(leftData);
 
         String[] emptyValues = new String[originalValues.length];
@@ -802,5 +907,57 @@ public class MergeServiceImpl implements MergeService {
 
         restoreValues.accept(leftData, originalValues);
         updateMethod.accept(leftId, leftData);
+
+        var leftEntity = fetchFunction.apply(leftId);
+        var rightEntity = fetchFunction.apply(rightId);
+
+        reindexMethod.accept(leftEntity);
+        reindexMethod.accept(rightEntity);
+    }
+
+    private <T extends Mergeable> void migrateIdentifierHistory(Function<Integer, T> fetchFunction,
+                                                                Consumer<T> saveMethod,
+                                                                Integer deletionEntityId,
+                                                                Integer mergedEntityId) {
+
+        var deletionEntity = fetchFunction.apply(deletionEntityId);
+        var mergedEntity = fetchFunction.apply(mergedEntityId);
+
+        mergedEntity.getMergedIds().addAll(deletionEntity.getMergedIds());
+        mergedEntity.getMergedIds().add(deletionEntityId);
+        mergedEntity.getOldIds().addAll(deletionEntity.getOldIds());
+
+        saveMethod.accept(deletionEntity);
+        saveMethod.accept(mergedEntity);
+    }
+
+    private void handleNoAuthorsRemaining(DocumentDTO leftData, DocumentDTO rightData) {
+        var loggedInUser =
+            (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+
+        if (loggedInUser.getAuthority().getAuthority().equals(UserRole.ADMIN.name())) {
+            return;
+        }
+
+        if (leftData.getContributions().isEmpty()) {
+            var byPerson = rightData.getContributions().stream()
+                .filter(c -> Objects.nonNull(c.getPersonId()))
+                .collect(Collectors.groupingBy(PersonContributionDTO::getPersonId));
+
+            byPerson.values().stream()
+                .filter(list -> list.size() > 1)
+                .map(list -> list.get(1)) // second occurrence
+                .forEach(contribution -> leftData.getContributions().add(contribution));
+
+        } else if (rightData.getContributions().isEmpty()) {
+            var byPerson = leftData.getContributions().stream()
+                .filter(c -> Objects.nonNull(c.getPersonId()))
+                .collect(Collectors.groupingBy(PersonContributionDTO::getPersonId));
+
+            byPerson.values().stream()
+                .filter(list -> list.size() > 1)
+                .map(list -> list.get(1)) // second occurrence
+                .forEach(contribution -> rightData.getContributions().add(contribution));
+        }
     }
 }
